--- a/src/components/Modal/Login.module.css
+++ b/src/components/Modal/Login.module.css
@@ -1,8 +1,9 @@
 .container {
-    height: 100%;
-    min-height: 100vh;
-    width: 100%;
-    background: linear-gradient(to right, #9900ff, #cc80ff);
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    background-color: rgba(0,0,0,0.4);
+    z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
