--- a/src/components/Modal/SignUp.module.css
+++ b/src/components/Modal/SignUp.module.css
@@ -1,9 +1,10 @@
 .container {
-    height: 100%;
-    min-height: 100vh;
-    width: 100%;
-    background: linear-gradient(to right, #9900ff, #cc80ff);
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
     display: flex;
+    z-index: 2;
     justify-content: center;
     align-items: center;
 }
