--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -12,6 +12,22 @@ nav{
     gap: 5rem;
     padding: .5rem;
 }
+/* nav {
+    display: none;
+} */
+.mobile-menu {
+    position: absolute;
+    padding: 1rem;
+    top: 20px;
+    left:15px;
+    display: none;
+    cursor: pointer;
+}
+.mobile-menu-exit {
+    margin: 0.5em;
+    cursor: pointer;
+    display: none;
+}
 #loginPng{
     cursor: pointer;
     display: block;
@@ -53,4 +69,48 @@ a{
 li:hover{
     transform: scale(1.1);
     color: whitesmoke;
+}
+@media only screen and (max-width:1200px){
+    .nav1 {
+            display: flex;
+            flex-direction: column;
+            position: fixed;
+            z-index: 999;
+            width: 66%;
+            left: 0;
+            top: 0;
+            background: #20272e;
+            height: 90vh;
+            padding: 1em;    
+        }
+        nav {
+                    display: none;
+                    flex-direction: column;
+                    position: fixed;
+                    z-index: 999;
+                    width: 66%;
+                    left: 0;
+                    top: 0;
+                    background: #20272e;
+                    height: 90vh;
+                    padding: 1em;
+                }
+        .mobile-menu{
+            display: block;
+        }
+        .mobile-menu-exit{
+            display: block;
+            position: absolute;
+            top: 25px;
+            right: 25px;
+            cursor: pointer;
+        }
+        .links {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 3rem;
+            padding: .5rem;
+        }
 }
