--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -18,7 +18,7 @@ nav{
 .mobile-menu {
     position: absolute;
     padding: 1rem;
-    top: 20px;
+    top: 15px;
     left:15px;
     display: none;
     cursor: pointer;
@@ -33,9 +33,9 @@ nav{
     display: block;
     padding: 1rem;
     position: absolute;
-     width: 40px;
-     height: 40px;
-    top: 0;
+     width: 30px;
+     height: 30px;
+    top: 10px;
     right: 0;
 }
 #logoPng{
@@ -113,4 +113,12 @@ li:hover{
             gap: 3rem;
             padding: .5rem;
         }
+         #logoPng {
+                    display: block;
+                    padding: 1rem;
+                    width: auto;
+                    height: 3em;
+                    top: 0;
+                    left: 50vw;
+                }
 }
