--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -34,6 +34,11 @@
     .hero_section{
         padding: 1rem;
     }
+         #p2,
+         #p3,
+         #p6 {
+             display: none;
+         }
 }
 @media only screen and (max-width:500px) {
     .heading {
@@ -48,6 +53,9 @@
 
     .hero_section {
         padding: 1rem;
+    }
+    #p2,#p3,#p6,#p1,#p4{
+        display: none;
     }
 }
 #poly1{
@@ -101,8 +109,10 @@
 .mess ,.about_mess{
     max-width: 1080px;
     line-height: 30px;
+    z-index: 10;
 }
 .about_us{
+    position: relative;
     margin-top: 5rem;
     margin-inline: 2rem;
     display: flex;
@@ -111,6 +121,9 @@
     justify-content: center;
     flex-direction: column;
     color: white;
+}
+.about_us>h2{
+    z-index: 10;
 }
 .annual{
     margin-top: 5rem;
@@ -144,6 +157,7 @@
     width: 100%;
 }
 .messs{
+    z-index: 10;
     text-align: center;
     display: block;
     margin-top:2rem ;
@@ -194,3 +208,61 @@
     width: 100%;
     cursor: pointer;
  }   
+
+ #p1,#p2,#p3,#p4,#p5,#p6{
+    height: 180px;
+    width: 200px;
+    position: absolute;
+ }
+ #p1{
+    top: 0;
+    left: 0;
+    transform: rotate(70deg);
+    z-index: 1;
+ }
+ #p2{
+    top: 1vh;
+    left: 5vw;
+    z-index: 2;
+    transform: rotate(-70deg);
+ }
+ #p3{
+    top:0;
+    right: 0;
+    transform: rotate(50deg);
+    z-index: 1;
+ }
+ #p4 {
+     top: 0;
+     right: 5vw;
+     transform: rotate(80deg);
+     z-index: 1;
+ }
+ #p5{
+    bottom: 0;
+    transform: rotate(-180deg);
+    z-index: 1;
+ }
+ /* footer design   */
+ .footer_container{
+    display: flex;
+    flex-direction: column;
+    margin: 3rem;
+    padding: 1rem;
+    gap: 1rem;
+ }
+ .copyright{
+    margin-inline:auto ;
+    text-align: center;
+    color: white;
+ }
+ .grid_container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+ }
+ .col1,.col2,.col3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+ }
