--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,22 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,900;1,500&display=swap');
 
 .Glimpses{
-    /* color: white; */ 
+    color: rgb(240, 236, 236); 
     font-family: Poppins, sans-serif;
     font-size: 2.2rem;
 }
 
 .card{
-    width: 30%;
+    width: 6em;
     border-radius: 15%;
-    margin-inline: 2em;
-    margin-block: 1.5em;
 }
 
 .card-img-top{
     border-radius: 15%;
-    width: 23vw;
-    height: 38vh;
+    width: 24em;
+    height: 19em;
     object-fit: cover;
 }
 
@@ -29,4 +27,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 4.2em;
+}
+
+.smallDiv{
+    width: 24em;
+    height: 19em;    
 }
