--- a/src/components/resource/Resource.css
+++ b/src/components/resource/Resource.css
@@ -51,8 +51,169 @@
     max-width: 10rem;
     max-height: 15rem;
     object-fit: cover;
+    cursor: pointer;
  }
  .glassLink{
     display: inline-block;
     color: #f766dc;
  }
+ .Glasscard_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin: 2rem;
+    padding: 1rem;
+    gap: 1rem;
+ }
+
+
+
+ /* books css */
+  @media only screen and (max-width:1024px) {
+      .wrapper {
+          top: 68px;
+      }
+  }
+
+  @media only screen and (max-width:838px) {
+      header {
+          flex-flow: wrap;
+          justify-content: center;
+      }
+
+
+  }
+  .cards {
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flex;
+      display: -o-flex;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      min-height: 100vh;
+      /* background-image: url(./pexels-rok-romih-3367931.jpg); */
+      background-size: cover;
+      background-position: center center;
+      /* font-family */
+  }
+   .wrapper {
+       display: flex;
+       position: relative;
+       flex-wrap: wrap;
+       justify-content: center;
+       top: -57px;
+   }
+   .wrapper .box {
+       /* width: 274px; */
+       width: 239px;
+       /* width: 18%; */
+       height: 324px;
+       /* height: 33%; */
+       margin: 12px;
+       border-radius: 15px;
+       transition: transform 500ms ease-out;
+       overflow: hidden;
+       color: #fff;
+       padding: 5%;
+       text-align: center;
+       /* background:rgba(255,255,255,0.2); */
+       backdrop-filter: blur(30px);
+       border: 2px none rgba(255, 255, 255, 0.1);
+   }
+    .card-content {
+        padding: 1.1em;
+        background: hsl(0 0% 0% / 0.7);
+        position: absolute;
+        /* bottom: 0px; */
+        /* display: none; */
+        /* left:274px; */
+        right: 125px;
+        top: 217px;
+        border-radius: 0px 25px 25px 0px;
+        transform: translateX(0px);
+        transition: transform 0.3s ease;
+    }
+.card-content .box:hover {
+    transform: translateX(-159px);
+    /* transition: transform 500ms ease; */
+    /* display: block; */
+}
+
+.card-title {
+    /* width:148px; */
+    width: 86px;
+}
+ .box img {
+     /* width:269px; */
+     width: 106%;
+     height: 101%;
+
+ }
+
+ .box img:hover {
+     transform: scale(1.2);
+     transition: transform 900ms ease
+ }
+
+ .box h4 {
+     font-size: 25px;
+     margin-top: 30px;
+     color: rgba(255, 255, 255, 0.7)
+ }
+
+ .box p {
+     line-height: 1.9;
+     color: rgba(255, 255, 255, 0.7)
+ }
+
+ .box a {
+     border: none;
+     /* background:#fff; */
+     padding: 15px 50px;
+     display: inline-block;
+     margin-top: 20px;
+     text-decoration: none;
+     font-size: 14px;
+     border-radius: 50px;
+ }
+  .wrapper .box:before {
+      content: '';
+      background: rgba(255, 255, 255, 0.1);
+      width: 60%;
+      height: 100%;
+      top: 0%;
+      left: -125%;
+      transform: skew(45deg);
+      position: absolute;
+      animation-direction: left;
+      transition-duration: 800ms;
+  }
+
+  .wrapper .box:hover {
+      transform: translateY(-5%);
+  }
+
+  .wrapper .card-content:hover {
+      cursor: pointer;
+
+  }
+
+  .wrapper .box:hover:before {
+      left: 150%;
+  }
+.button {
+        display:inline-block;
+        outline: none;
+        border: none;
+        background-color: #9900ff;
+        color: #fff;
+        border-radius: 5px;
+        font-weight: bold;
+        font-size: 1rem;
+        padding: 10px 16px;
+        cursor: pointer;
+        z-index: 2;
+    }
