scroll bar designed

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -122,3 +122,9 @@ li:hover{
                     left: 50vw;
                 }
 }
+.displayname{
+    position: absolute;
+    top: 48px;
+    right: 8px;
+    color: whitesmoke;
+}
