--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -141,12 +141,14 @@
     padding: .5rem;
     height: 25rem;
     width: 20rem;
-    background: linear-gradient(180deg, #040036 -1.5%, rgba(25, 0, 95, 0.94) 22.04%, rgba(50, 5, 148, 0.82) 42.48%, rgba(118, 38, 205, 0.765252) 63.05%, rgba(148, 36, 236, 0.67) 85.8%, rgba(76, 16, 111, 0.859997) 95.73%, #450050 102.69%, #1F0027 112.61%);
+    /* background: linear-gradient(180deg, #040036 -1.5%, rgba(25, 0, 95, 0.94) 22.04%, rgba(50, 5, 148, 0.82) 42.48%, rgba(118, 38, 205, 0.765252) 63.05%, rgba(148, 36, 236, 0.67) 85.8%, rgba(76, 16, 111, 0.859997) 95.73%, #450050 102.69%, #1F0027 112.61%); */
+    background: radial-gradient(148.14% 148.03% at -37.65% -24.08%, #3D006D 0%, rgba(77, 0, 138, 0) 100%);
     text-align: center;
     border-radius: 5rem;
 }
 .card_container>p{
-    color: rgb(186, 59, 225);
+    color:black;
+    font-weight: 500;
     text-transform: capitalize;
     font-weight: 500;
     font-size: 1.2rem;
