--- a/src/components/Modal/SignOut.module.css
+++ b/src/components/Modal/SignOut.module.css
@@ -24,7 +24,8 @@
     padding: 10px 16px;
     width: 100%;
     cursor: pointer;
+    transition: all .5s;
 }
-.button :hover{
-    transform: scale(1.1);
+.button:hover{
+    transform:translateY(-5px);
 }
