--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,900;1,500&display=swap');
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Poppins,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(180deg, #040036 -1.5%, rgba(25, 0, 95, 0.94) 22.04%, rgba(50, 5, 148, 0.82) 42.48%, rgba(118, 38, 205, 0.765252) 63.05%, rgba(148, 36, 236, 0.67) 85.8%, rgba(76, 16, 111, 0.859997) 95.73%, #450050 102.69%, #1F0027 112.61%);
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
   }
+body::-webkit-scrollbar {
+  width: 10px;
+  /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: linear-gradient(180deg, #040036 -1.5%, rgba(25, 0, 95, 0.94) 22.04%, rgba(50, 5, 148, 0.82) 42.48%, rgba(118, 38, 205, 0.765252) 63.05%, rgba(148, 36, 236, 0.67) 85.8%, rgba(76, 16, 111, 0.859997) 95.73%, #450050 102.69%, #1F0027 112.61%);
+  /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(217, 83, 217);
+  /* color of the scroll thumb */
+  border-radius: 20px;
+  /* roundness of the scroll thumb */
+  /* creates padding around scroll thumb */
+}
