--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   overflow-x: hidden;
+  scroll-behavior: smooth;
   }
 body::-webkit-scrollbar {
   width: 10px;
