--- a/src/components/CardRayyan/cardRayyan.css
+++ b/src/components/CardRayyan/cardRayyan.css
@@ -1,4 +1,4 @@
-.container{
+.container1{
     position: relative;
     display: flex;
     width: 30%;
@@ -6,7 +6,7 @@
     margin: 1.5%;
 }
 
-.container .card{
+.container1 .card1{
     height: 550px;
     width: 100%;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
@@ -25,12 +25,12 @@
 
 }
 
-.bottom-container{
+.bottom-container1{
     height: 40%;
     width: 100%;
 }
 
-.container .card .content{
+.container1 .card1 .content{
     padding: 10px;
     text-align: center;
     display: flex;
@@ -43,19 +43,21 @@
     transition: 0.5s;
 
 }
-.container .card .content h3{
+.container1 .card1 .content h3{
     margin-bottom: 0;
     color: white;
 }
 
-.container .card .content .prof-pic{
-    height: 40%;
+.container1 .card1 .content .prof-pic{
     margin: auto 0;
     padding: 0;
-    clip-path: circle();
+    border-radius: 50%;
+    height: 50%;
+    width: 50%;
+    object-fit: cover;
 }
 
-.container .card .content p{
+.container1 .card1 .content p{
     font-size : 1em;
     color: #fff;
     font-weight: 300;    
@@ -76,13 +78,13 @@
     scale: 1.2;
 }
 
-.container .card .content a{
+.container1 .card1 .content a{
     width: 30%;
     height: 45%;
 }
 
 @media only screen and (max-width: 900px) {
-    .container .card{
+    .container1 .card1{
         height: 350px;
         font-size: 0.9em;
     }
