--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,8 @@
 .footer_container{
    display: flex;
    flex-direction: column;
+   text-align: center;
+   justify-content: center;
    margin: 3rem;
    padding: 1rem;
    gap: 1rem;
@@ -19,4 +21,15 @@
    align-items: center;
    justify-content: center;
    flex-direction: column;
+}
+
+.emailFooter{
+   display: flex;
+   flex-direction: row;
+}
+
+@media (max-width: 848px){
+   .emailFooter{
+      display:block;
+   }
 }
