--- a/src/components/FAQ/Faq.css
+++ b/src/components/FAQ/Faq.css
@@ -11,6 +11,9 @@
 }
 
 .Qset {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     -webkit-user-select: none;
     /* Safari */
     -ms-user-select: none;
@@ -48,15 +51,22 @@ a {
 }
 
 .QAset {
-    margin: 0.2rem;
     background-color: rgb(255, 255, 255);
     align-items: center;
     border-radius: 0.5rem;
     margin: 0.7rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .QAset h3 {
-    height: 3rem;
+    align-items: center;
+    justify-content: center;
+    padding: 0.6rem;
+}
+
+.faq-click {
+    align-items: center;
 }
 
 .QAset p {
