--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -164,29 +164,9 @@
     max-width: 100%;
     color: black;
 }
-
-.galleryCard{
-    display: flex;
-        align-items: center;
-        align-items: center;
-        flex-direction: column;
-        margin-top: 3rem;
-        margin-inline: auto;
-        padding: .5rem;
-        height: 25rem;
-        width: 20rem;
-        text-align: center;
-        border-radius: 5rem;
-}
-#imgS4{
-    display: block;
-    border-radius: 5%;
-    height: 25rem;
-    width: 20rem;
-    object-fit: contain;
-}
 .gallery_container{
-    margin-top: 5rem;
+         margin-top: 5rem;
+         margin-bottom: 2rem;
         margin-inline: 2rem;
         display: block;
         text-align: center;
