--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,29 +1,71 @@
 .hero_section{
     position: relative;
     padding: 2rem;
-    margin-top: 6rem;
     display: flex;
     align-items: center;
+    overflow: hidden;
     justify-content: center;
     flex-direction: column;
+    background: none;
+}
+#circuits{
+    position:absolute;
+    z-index: -10;
+}
+#circuits1{
+    position: absolute;
+        z-index: -10;
+    display: none;
+}
+@media only screen and (min-width:900px){
+    #circuits{
+        height:40rem;
+        width:40rem;
+        right: -30%;
+    }
+    #circuits1{
+        display: block;
+        height:40rem;
+        width:40rem;
+        transform: scaleX(-1);
+        left: -30%;
+    }
+}
+@media only screen and (min-width:1200px){
+    #circuits{
+        height:50rem;
+        width:50rem;
+        right: -30%;
+    }
+    #circuits1{
+        display: block;
+        height:50rem;
+        width:50rem;
+        transform: scaleX(-1);
+        left: -30%;
+    }
 }
 .heading{
     display: block;
-    font-size: 2.5rem;
-    color: white;
+    font-size: 2.3rem;
+    color:#fff;
     letter-spacing: 1px;
     line-height: 5rem;
+    margin-top: -5rem;
     z-index: 10;
+    font-weight: 500;
+    text-shadow: 3px 3px 2px rgba(128, 11, 81, 1), 7px 3px 7px rgba(128, 22, 107, 1), 0px 5px 24px rgba(128, 15, 124, 1);
 }
 .nit{
     display: block;
     font-size: 2rem;
     color: white;
     z-index: 10;
+    text-shadow: 3px 3px 2px rgba(128, 11, 81, 1), 7px 3px 7px rgba(128, 22, 107, 1), 0px 5px 24px rgba(128, 15, 124, 1);
 }
-@media only screen and (max-width:830px){
+@media only screen and (max-width:860px){
     .heading{
-        font-size: 1.3rem;
+        font-size: 1.8rem;
         letter-spacing: 1.5px;
         line-height: 5rem;
     }
@@ -33,11 +75,21 @@
     .hero_section{
         padding: 1rem;
     }
-         #p2,
-         #p3,
-         #p6 {
-             display: none;
-         }
+}
+@media only screen and (max-width:700px) {
+    .heading {
+        font-size: 1.3rem;
+        letter-spacing: 1px;
+        line-height: 5rem;
+    }
+
+    .nit {
+        font-size: 1.2rem;
+    }
+
+    .hero_section {
+        padding: 1rem;
+    }
 }
 @media only screen and (max-width:500px) {
     .heading {
@@ -228,3 +280,4 @@
     transform: rotate(-180deg);
     z-index: 1;
  }
+ 
