--- a/src/components/Home/Gallerycard.css
+++ b/src/components/Home/Gallerycard.css
@@ -1,17 +1,16 @@
  .slide{
      width:100%;
-     height:37rem;
+    height: 30rem;
  }
  .slide img{
     width:100%;
     height:100%;
     display: block;
     border-radius: 1rem;
-    object-fit: cover;
  }
  .slide{
     filter: blur(5px);
-    transform: scale(.5);
+    transform: scale(.4);
     transition: all .5s ease-in-out;
  }
 .slide-active{
@@ -20,6 +19,18 @@
 }
 @media only screen and (max-width:1385px ){
     .slide{
-        height: 35rem;
+        height: 30rem;
+        width:30rem;
+    }
+}
+@media only screen and (max-width:800px ){
+    .slide{
+        height: 30rem;
+    }
+}
+@media only screen and (max-width:600px ){
+    .slide{
+        height: 20rem;
+        width:20rem;
     }
 }
