--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -150,17 +150,21 @@
 }
 #img2s{
     display: block;
-    height: 80px;
-    width:80px;
+    height: 150px;
+    width:150px;
     border-radius: 50%;
     border: 1px solid whitesmoke;
     margin: 2rem;
-
 }
 .mess ,.about_mess{
     max-width: 1080px;
     line-height: 30px;
     z-index: 10;
+}
+.about_mess{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    letter-spacing: 2px;
 }
 .about_us{
     position: relative;
@@ -183,6 +187,7 @@
     text-align: center;
     color: white;
 }
+/* ///////card css (specter wala)///// */
 .card_container{
     display: flex;
     align-items: center;
@@ -191,14 +196,14 @@
     margin-top: 3rem;
     margin-inline: auto;
     padding: .5rem;
-    height: 25rem;
+    height: 26rem;
     width: 20rem;
     background: radial-gradient(148.14% 148.03% at -37.65% -24.08%, #3D006D 0%, rgba(77, 0, 138, 0) 100%);
     text-align: center;
     border-radius: 5rem;
 }
 .card_container>p{
-    color:black;
+    color:whitesmoke;
     font-weight: 500;
     text-transform: capitalize;
     font-weight: 500;
@@ -214,8 +219,10 @@
     display: block;
     margin-top:2rem ;
     max-width: 100%;
-    color: black;
+    color: rgb(5, 4, 4);
 }
+
+/* ///////// */
 .gallery_container{
          margin-top: 5rem;
          margin-bottom: 2rem;
