--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -26,10 +26,27 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     gap: 4.2em;
 }
 
 .smallDiv{
     width: 24em;
     height: 19em;    
+}
+@media only screen and (max-width:410px){
+    .card {
+            width: 3em;
+            border-radius: 15%;
+        }
+    .smallDiv {
+            width: 20em;
+            height: 15em;
+        }
+        .card-img-top {
+            border-radius: 15%;
+            width: 20em;
+            height: 15em;
+            object-fit: cover;
+        }
 }
