--- a/src/components/Home/Gallerycard.css
+++ b/src/components/Home/Gallerycard.css
@@ -7,6 +7,7 @@
     height:100%;
     display: block;
     border-radius: 1rem;
+    object-fit: cover;
  }
  .slide{
     filter: blur(5px);
@@ -31,6 +32,6 @@
 @media only screen and (max-width:600px ){
     .slide{
         height: 20rem;
-        width:20rem;
+        width:23rem;
     }
 }
