--- a/src/components/spectrum/spectrum.css
+++ b/src/components/spectrum/spectrum.css
@@ -1,16 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 .specContainer{
-    margin: 2rem;
+        position: relative;
+        padding: 2rem;
+        display: flex;
+        align-items: center;
+        overflow: hidden;
+        justify-content: center;
+        flex-direction: column;
+        background: none;
 }
-.specName{
-    font-size: 6em;
-    font-family: 'Lobster', cursive;
-    position: relative;
+.spectrumImage{
+    margin-top: 3rem;
     display: flex;
-    letter-spacing: 10px;
     justify-content: center;
-    color:white;
-    margin: 5rem;
-    font-weight: bolder;
+    align-items: center;
+    max-width: 100%;
+}
+.spectrumImage>img {
+    width: 95%;
+    object-fit: cover;
+    clip-path: circle(50%);
+}
+.heading1 {
+    display: block;
+    font-size: 4rem;
+    color: #fff;
+    letter-spacing: 1px;
+    line-height: 5rem;
+    margin-top: -5rem;
+    z-index: 10;
+    font-weight: 500;
+    text-shadow: 3px 3px 2px rgba(128, 11, 81, 1), 7px 3px 7px rgba(128, 22, 107, 1), 0px 5px 24px rgba(128, 15, 124, 1);
+}
+@media only screen and (max-width:860px) {
+    .heading1 {
+        font-size: 3rem;
+        letter-spacing: 1.5px;
+        line-height: 5rem;
+    }
+}
+@media only screen and (max-width:400px) {
+    .heading1 {
+        font-size: 2rem;
+        letter-spacing: 1px;
+        line-height: 5rem;
+    }
+}
+@media only screen and (max-width:500px) {
+    .heading1 {
+        font-size: 2.8rem;
+        letter-spacing: 1px;
+        line-height: 5rem;
+    }
 }
 
