--- a/src/components/Chamber/chamber.css
+++ b/src/components/Chamber/chamber.css
@@ -3,36 +3,17 @@
     flex-direction: column;
     padding: 2rem;
     color: azure;
-    width: 100%;
+    max-width: 100%;
     gap: 1rem;
     justify-content: center;
     align-items: center;
-}
-.levelContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-.questionContainer{
-    display: flex;
-    width: 100%;
 }
 .questionflex{
     display: flex;
     gap: 1rem;
-    width: 60%;
+    width: 70%;
     flex-direction: column;
-}
-.questionsimg{
-    width: 40%;
 }
 .questionsimg img{
     width: 20rem;
-}
-@media only screen and (max-width:500px){
-    .question{
-        flex-direction: column;
-    }
 }
